<resources>
    <string name="app_name">IMC/RCQ</string>
    <string name="action_settings">Configuracões</string>

    <!--Texts-->
    <string name="txt_peso">Peso</string>
    <string name="txt_altura">Altura</string>
    <string name="txt_resultado">Resultado</string>
    <string name="txt_cintura">Cintura</string>
    <string name="txt_quadril">Quadril</string>
    <string name="txt_idade">Idade</string>
    <string name="txt_kg">kg</string>
    <string name="txt_mt">metros</string>
    <string name="txt_cm">cm</string>

    <!--Botões-->
    <string name="btn_calcular">Calcular</string>
    <string name="btn_limpar">Limpar</string>
    <string name="btn_gravar">Gravar</string>

    <!--Radio Group-->
    <string name="rdg_sexo">Sexo</string>
    <string name="rgd_masc">Masculino</string>
    <string name="rgd_femi">Feminino</string>

    <!--Campos obrigatórios-->
    <string name="camposObrig">Campos Obrigatórios</string>
    <string name="campoPeso">Campo peso obrigatório</string>
    <string name="campoAltura">Campo altura obrigatório</string>
    <string name="campoCintura">Campo cintura obrigatório</string>
    <string name="campoQuadril">Campo quadril obrigatório</string>
    <string name="campoIdade">Campo idade obrigatório</string>

    <!--Abas-->
    <string name="abaImc">IMC</string>
    <string name="abaRcq">RCQ</string>

    <!--Classificação IMC-->
    <string name="claMagreza1">Magreza Grau I</string>
    <string name="claMagreza2">Magreza Grau II</string>
    <string name="claMagreza3">Magreza Grau III</string>
    <string name="claEutrofia">Eutrofia</string>
    <string name="claSobrepeso">Sobrepeso</string>
    <string name="claObesidade1">Obesidade Grau I</string>
    <string name="claObesidade2">Obesidade Grau II</string>
    <string name="claObesidade3">Obesidade Grau III</string>

    <!--Classificação RCQ-->
    <string name="claBaixo">Baixo</string>
    <string name="claModerado">Moderado</string>
    <string name="claAlto">Alto</string>
    <string name="claMuitoAlto">Muito Alto</string>
    <string name="claValorInvalido">Valores Inválidos</string>
    <string name="claIdadeInvalido">Idade deve estar entre 29 e 59</string>

    <!--Frases ICQ-->
    <string name="fraMuitoBaixo">Você está muito abaixo de seu peso ideal</string>
    <string name="fraPoucoBaixo">Você está abaixo de seu peso ideal</string>
    <string name="fraBaixo">Você está um pouco abaixo de seu peso ideal</string>
    <string name="fraIdeal">Parabéns, você está em seu peso adequado</string>
    <string name="fraSobre">Você está acima de seu peso ideal</string>
    <string name="fraMuiAlto">Você está muito acima de seu peso ideal</string>
    <string name="pesoIdeal">Seu peso ideal é de aproximadamente: </string>

    <!--Frases RCQ-->
    <string name="RcqBaixo">Você possui baixo risco para síndromes metabólicas</string>
    <string name="RcqModerado">Você possui risco moderado para síndromes metabólicas</string>
    <string name="RcqAlto">Você possui alto risco para síndromes metabólicas</string>
    <string name="valoresInv">Insira valores válidos</string>

</resources>
