<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dip" >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytTxtPeso"
        android:layout_width="100dip"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:hint="@string/txt_peso" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_kg"
        android:layout_toRightOf="@id/lytTxtPeso"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mt"
        android:layout_toRightOf="@+id/lytTxtAltura"
        android:layout_below="@id/lytTxtPeso"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/lytTxtPeso"
        android:id="@+id/lytTxtAltura"
        android:layout_width="100dip"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:hint="@string/txt_altura" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_below="@id/lytTxtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txtSexo"
        android:text="@string/rdg_sexo" />

    <RadioGroup
        android:id="@+id/rdg_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSexo"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawableRight="@drawable/radio_button_selector_female"
            android:id="@+id/rdb_female"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/radio_button_selector_male"
            android:id="@+id/rdb_male"/>

    </RadioGroup>

    <TextView
        android:layout_toRightOf="@id/lytTxtPeso"
        android:layout_below="@id/lytTxtPeso"
        android:id="@+id/TxtResultadoRcq"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:singleLine="true"
        style="@style/styleResultado"/>

    <LinearLayout
        android:layout_below="@id/rdg_sexo"
        android:id="@+id/btn_botoesIMC"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:text="@string/btn_calcular"
            android:layout_weight="1.0" />
        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:text="@string/btn_limpar"
            android:layout_weight="1.0" />
    </LinearLayout>

    <TextView
        android:layout_below="@id/btn_botoesIMC"
        android:id="@+id/txtTipo"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/styleClaImc"/>
    <TextView
        android:layout_below="@id/txtTipo"
        android:id="@+id/txtFrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/styleFraImc"/>
    <TextView
        android:layout_below="@id/txtFrase"
        android:id="@+id/txtPesoIdeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/styleFraImc"/>

</RelativeLayout>
