<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dip">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lytTxtCintura"
        android:layout_width="100dip"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtCintura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:hint="@string/txt_cintura" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cm"
        android:layout_toRightOf="@+id/lytTxtCintura"
        android:layout_below="@id/lytTxtPeso"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/lytTxtCintura"
        android:layout_alignBottom="@id/edtPeso"
        android:id="@+id/lytTxtQuadril"
        android:layout_width="100dip"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtQuadril"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:hint="@string/txt_quadril" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cm"
        android:layout_toRightOf="@+id/lytTxtQuadril"
        android:layout_below="@id/lytTxtCintura"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_below="@+id/lytTxtQuadril"-->
        <!--android:id="@+id/lytTxtIdade"-->
        <!--android:layout_width="100dip"-->
        <!--android:layout_height="wrap_content">-->
        <!--<EditText-->
            <!--android:id="@+id/edtIdade"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:singleLine="true"-->
            <!--android:inputType="number"-->
            <!--android:hint="@string/txt_idade"/>-->
    <!--</android.support.design.widget.TextInputLayout>-->

    <TextView
        android:layout_below="@id/lytTxtQuadril"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txtSexo"
        android:text="@string/rdg_sexo" />

    <RadioGroup
        android:layout_below="@id/txtSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rdgSexo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/radio_button_selector_female"
            android:id="@+id/rdbFemi"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/radio_button_selector_male"
            android:id="@+id/rdbMasc"/>
    </RadioGroup>

    <TextView
        android:layout_toRightOf="@id/lytTxtCintura"
        android:layout_below="@id/lytTxtCintura"
        android:id="@+id/TxtResultadoRcq"
        android:gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:singleLine="true"
        style="@style/styleResultado"/>

    <LinearLayout
        android:id="@+id/btn_botoes"
        android:layout_below="@id/rdgSexo"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:text="@string/btn_calcular"
            android:layout_weight="1.0" />
        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0.0dip"
            android:layout_height="match_parent"
            android:text="@string/btn_limpar"
            android:layout_weight="1.0" />
    </LinearLayout>

    <TextView
        android:layout_below="@id/btn_botoes"
        android:id="@+id/txtTipoRcq"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/styleClaImc"/>
    <TextView
        android:layout_below="@id/txtTipoRcq"
        android:id="@+id/txtFraseRcq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/styleFraImc"/>

</RelativeLayout>